Fixed some errors

--- a/ShipsAndPorts.Core/ShipsAndPorts.Core.csproj
+++ b/ShipsAndPorts.Core/ShipsAndPorts.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+  </ItemGroup>
+
 </Project>
