--- a/ShipsAndPorts.Services/ShipsAndPorts.Services.csproj
+++ b/ShipsAndPorts.Services/ShipsAndPorts.Services.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ShipsAndPorts.Core\ShipsAndPorts.Core.csproj" />
   </ItemGroup>
 
