--- a/ShipsAndPorts.Core/ShipsAndPorts.Core.csproj
+++ b/ShipsAndPorts.Core/ShipsAndPorts.Core.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
   </ItemGroup>
 
 </Project>
